De-dumbed! Now no longer uses Groovy internal structures to clone, but just gets the data Map and does clone() on it!!!
All tests hold and no Illegal Reflection warning is generated!